--- a/src/pages/Error/Error.css
+++ b/src/pages/Error/Error.css
@@ -1,44 +1,49 @@
-.error {
-    position: absolute;
-    top: 0;
-    left: 0;
-    font-family: 'Arvo', serif;
-    background: #ABCDEF;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transition: 1s;
-    color: #20293F;
-    box-shadow: 0 5px 0px -2px #20293F;
-    text-align: center;
-    animation: fadein 1.2s ease-in;
-    width: 100%;
-    height: 100vh;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+.error__page {
+  font-family: "Poppins", sans-serif;
+  width: 100%;
+  height: 100vh;
+  background-color: white;
+  position: absolute;
+  top: 0;
 }
 
-.error>.code {
-    font-size: 10.5em;
-    text-shadow: 0 6px 1px rgba(0, 0, 0, 0.0980392), 0 0 5px rgba(0, 0, 0, 0.0980392), 0 1px 3px rgba(0, 0, 0, 0.298039), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.247059), 0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.14902);
-    margin: 0;
+.error__page .container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding-top: 50px;
 }
 
-.error>.desc {
-    text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5), 0px 6px 20px rgba(0, 0, 0, 0.3);
-    font-weight: 400;
+.error__page .gif {
+  display: flex;
+  justify-content: center;
 }
 
-@keyframes fadein {
-    0% {
-        margin-top: -50px;
-        opacity: 0;
-    }
+.error__page .content {
+  text-align: center;
+  margin: 3rem 0;
+}
 
-    50% {
-        opacity: 0.5;
-    }
+.error__page .content .main-heading {
+  font-size: 2.5rem;
+  font-weight: 700;
+}
 
-    100% {
-        opacity: 1;
-    }
+.error__page p {
+  font-size: 1.3rem;
+  padding: 0.7rem 0;
+}
+
+.error__page button {
+  padding: 1rem;
+  border-radius: 15px;
+  outline: none;
+  border: none;
+  background: #0046d4;
+  color: #fff;
+  font-size: 1.3rem;
+  cursor: pointer;
 }
